sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if(nain=getNombreValeurs()-1){return}
         ^